--- a/exercise_week_1_individual.ipynb
+++ b/exercise_week_1_individual.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODZpDda1R4hgJh2aZEZBpk",
+      "authorship_tag": "ABX9TyMom7pi+I93ZH/Mg3dBp7Uo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
       "metadata": {
         "id": "KKfA3ko7bx3d"
       },
-      "execution_count": 25,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -59,13 +59,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tfJzAQCzbPLX",
-        "outputId": "da90eb58-1d21-4a08-eff9-f0fbda0fbc76"
+        "outputId": "0825edb3-2051-4fe8-c063-d956eb27d400"
       },
       "outputs": [
         {
@@ -210,9 +210,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lRalAujlskJV",
-        "outputId": "1645db36-365b-41ae-847d-ecca456cad12"
+        "outputId": "ade3eac6-3522-4f7c-ecdd-aeb014b1cab4"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,9 +307,9 @@
           "height": 784
         },
         "id": "mLQw1i7k_KEl",
-        "outputId": "2fd40f01-adb9-4a21-b6db-ea1e9ad71c25"
+        "outputId": "886056dd-f38b-49f6-d7ee-fa896a6c11b6"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -390,9 +390,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5hxSug2aEYGE",
-        "outputId": "66963bcc-b489-4802-a200-6262079bae08"
+        "outputId": "95d3039e-d7d1-48e5-8479-2ed001f11aef"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +410,7 @@
       "source": [
         "Interpretation:\n",
         "\n",
-        "Virginica has particularly large petals due to its strong skew. In contrast, Versicolot shows a pronounced number of smaller values. Setosa is in the middle range, behaving almost symmetrically."
+        "Virginica has particularly large petals due to its strong skew (positive). In contrast, Versicolor shows a pronounced number of smaller values (negative). Setosa is in the middle range, behaving almost symmetrically."
       ],
       "metadata": {
         "id": "4fha872vIdCy"
@@ -479,9 +479,9 @@
           "height": 803
         },
         "id": "nDIi1zQzKtL8",
-        "outputId": "2333c676-3cfd-47db-9e20-154621f2f621"
+        "outputId": "8f81cb3b-be9c-44dd-c861-9350be1abddb"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -576,9 +576,9 @@
           "height": 446
         },
         "id": "lE18y1aiG4-6",
-        "outputId": "62d948a9-8e0d-4363-8d44-b887bfa0d1c9"
+        "outputId": "513cf6f0-519d-47a1-f6b0-68c06f04508c"
       },
-      "execution_count": 19,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -654,9 +654,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8VZtI47dOXc3",
-        "outputId": "c2070dfc-2f30-4634-9e19-c03f8937354b"
+        "outputId": "ab04d7c0-224d-4fda-ccbc-ff478769af91"
       },
-      "execution_count": 22,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -723,15 +723,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ugF7PNOpSE5X",
-        "outputId": "de90c107-b9bc-4ec1-d61b-ab195a8215fd"
+        "outputId": "55defd46-0ce1-4903-840a-53b3da544350"
       },
-      "execution_count": 26,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "f-statistic: 960.0071468018067\n",
+            "F-statistic: 960.0071468018067\n",
             "p-value: 4.169445839443833e-85\n"
           ]
         }
